# parallel-clang

./: .gitignore  CMakeLists.txt  ParallelClangPlugin.cpp  README.md  use-llvm-git.sh
ast_matcher/: CMakeLists.txt  attributedStmtMatcher.cpp  attributedStmtMatcher.h
attribute/: CMakeLists.txt
cmake/: llvm.cmake
example/: normal.cpp  test.cpp  test_unexpected_control_flow.cpp  test_wrong_usage.cpp  valid.cpp
lint/: CMakeLists.txt  ParallelLintAction.cpp  ParallelLintAction.h
src/: CMakeLists.txt  ParallelAttribute.cpp  ParallelLintAction.cpp  ParallelTransformAction.cpp  ParallelTransformAction.h
src/transform/: CMakeLists.txt  ParallelTransformAction.cpp  ParallelTransformAction.h
transformer/: CMakeLists.txt  ParallelAttribute.cpp  ParallelTransformer.cpp
transformer_test/: CMakeLists.txt  ParallelTransformer.cpp  ParallelTransformerTest.cpp
